update packages list

--- a/recipe.yml
+++ b/recipe.yml
@@ -59,7 +59,8 @@ rpm:
     - fish
     - kitty
     - feh
-    - 
+    - nodejs
+    - neovim
     # #### Missing ####
     # - broot
     # - zellij
